--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 	<header class="header">
 		<div class="header-container">
 				<div class="logo-container">
-						<img src="/images/logo.png" alt="Логотип университета" class="logo">
+						<img src="./images/logo.png" alt="Логотип университета" class="logo">
 						<h1 class="site-title">Заселение в общежитие</h1>
 				</div>
 				<nav>
@@ -389,7 +389,7 @@
             <div class="hostels-grid">
                 <div class="hostel-card">
                     <a href="/hostels/hostel1.html">
-                        <img src="/images/obsh1.jpg" alt="Общежитие №1" class="hostel-image">
+                        <img src="./images/obsh1.jpg" alt="Общежитие №1" class="hostel-image">
                         <div class="hostel-info">
                             <h3>Общежитие №1</h3>
                             <p>Адрес: ул. Студенческая, 1</p>
@@ -399,7 +399,7 @@
                 </div>
                 <div class="hostel-card">
                     <a href="/hostels/hostel2.html">
-                        <img src="/images/obsh2.jpg" alt="Общежитие №2" class="hostel-image">
+                        <img src="./images/obsh2.jpg" alt="Общежитие №2" class="hostel-image">
                         <div class="hostel-info">
                             <h3>Общежитие №2</h3>
                             <p>Адрес: ул. Университетская, 5</p>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="hostel-card">
                     <a href="/hostels/hostel3.html">
-                        <img src="/images/obsh3.jpg" alt="Общежитие №3" class="hostel-image">
+                        <img src="./images/obsh3.jpg" alt="Общежитие №3" class="hostel-image">
                         <div class="hostel-info">
                             <h3>Общежитие №3</h3>
                             <p>Адрес: пр. Ленина, 10</p>
